rust/macros/tests/invalid/target/debug/deps/triple_arguments_rs-6f2efae6120d741e.d
/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/triple_arguments_rs-6f2efae6120d741e: triple-arguments.rs

/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/triple_arguments_rs-6f2efae6120d741e.d: triple-arguments.rs

triple-arguments.rs:
